--- a/index.html
+++ b/index.html
@@ -1,12 +1,131 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/main.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/main.css" />
     <title>Document</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <header class="header">
+      <div class="container header__container">
+        <div class="header__block">
+          <a class="header__logo" href="#">
+            <img src="./img/logo.svg" alt="logo" />
+          </a>
+          <nav class="header__nav">
+            <ul class="header__list">
+              <li class="header__item">
+                <a class="header__link" href="#">HOME</a>
+              </li>
+              <li class="header__item">
+                <a class="header__link" href="#">ABOUT US</a>
+              </li>
+              <li class="header__item">
+                <a class="header__link" href="#">Create your plan</a>
+              </li>
+            </ul>
+            <button class="header__btn"></button>
+          </nav>
+        </div>
+      </div>
+    </header>
+    <main>
+      <section class="hero">
+        <div class="container hero__container">
+          <div class="hero__block">
+            <div class="hero__content">
+              <h1 class="hero__title">Great coffee made simple.</h1>
+              <p class="hero__text">
+                Start your mornings with the world’s best coffees. Try our
+                expertly curated artisan coffees from our best roasters
+                delivered directly to your door, at your schedule.
+              </p>
+              <button class="hero__button">Create your plan</button>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="collection">
+        <div class="container collection__container">
+          <div class="collection__block">
+            <ul class="collection__list">
+              <li class="collection__item">
+                <div class="collection__img_block">
+                  <img src="./img/coffe.png" alt="img" />
+                </div>
+                <div class="collection__content">
+                  <h2 class="collection__sub_title">Gran Espresso</h2>
+                  <p class="collection__des">
+                    Light and flavorful blend with cocoa and black pepper for an
+                    intense experience
+                  </p>
+                </div>
+              </li>
+              <li class="collection__item">
+                <div class="collection__img_block">
+                  <img src="./img/coffe.png" alt="img" />
+                </div>
+                <div class="collection__content">
+                  <h2 class="collection__sub_title">Planalto</h2>
+                  <p class="collection__des">
+                    Brazilian dark roast with rich and velvety body, and hints
+                    of fruits and nuts
+                  </p>
+                </div>
+              </li>
+              <li class="collection__item">
+                <div class="collection__img_block">
+                  <img src="./img/coffe.png" alt="img" />
+                </div>
+                <div class="collection__content">
+                  <h2 class="collection__sub_title">Piccollo</h2>
+                  <p class="collection__des">
+                    Mild and smooth blend featuring notes of toasted almond and
+                    dried cherry
+                  </p>
+                </div>
+              </li>
+              <li class="collection__item">
+                <div class="collection__img_block">
+                  <img src="./img/coffe.png" alt="img" />
+                </div>
+                <div class="collection__content">
+                  <h2 class="collection__sub_title">Danche</h2>
+                  <p class="collection__des">
+                    Ethiopian hand-harvested blend densely packed with vibrant
+                    fruit notes
+                  </p>
+                </div>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </section>
+      <section class="hero__content-block">
+        <div class="content-block">
+          <div class="works_block">
+            <ul>
+              <li class="block__list">
+                <h2 class="raqam__01">01</h2>
+             <h3>Pick your coffee</h3>
+             <p>Select from our evolving range of artisan coffees. Our beans are ethically sourced and we pay fair prices for them. There are new coffees in all profiles every month for you to try out.</p>
+            </li>
+              <li class="block__list">
+                <h2 class="raqam__01">02</h2>
+             <h3>Choose the frequency</h3>
+             <p>Customize your order frequency, quantity, even your roast style and grind type. Pause, skip or cancel your subscription with no commitment through our online portal.</p>
+              </li>
+              <li class="block__list">
+                <h2 class="raqam__01">03</h2>
+             <h3>Receive and enjoy!</h3>
+             <p>We ship your package within 48 hours, freshly roasted. Sit back and enjoy award-winning 
+                world-class coffees curated to provide a distinct tasting experience.</p>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </section>
+    </main>
+  </body>
 </html>
