--- a/index.html
+++ b/index.html
@@ -105,24 +105,26 @@
       <section class="hero__content-block">
         <div class="content-block">
           <div class="works_block">
+            <h1 class="h1_1">How it works</h1>
             <ul>
               <li class="block__list">
                 <h2 class="raqam__01">01</h2>
-             <h3>Pick your coffee</h3>
-             <p>Select from our evolving range of artisan coffees. Our beans are ethically sourced and we pay fair prices for them. There are new coffees in all profiles every month for you to try out.</p>
+             <h3 class="h3_1">Pick your coffee</h3>
+             <p class="p_1">Select from our evolving range of artisan coffees. Our beans are ethically sourced and we pay fair prices for them. There are new coffees in all profiles every month for you to try out.</p>
             </li>
               <li class="block__list">
                 <h2 class="raqam__01">02</h2>
-             <h3>Choose the frequency</h3>
-             <p>Customize your order frequency, quantity, even your roast style and grind type. Pause, skip or cancel your subscription with no commitment through our online portal.</p>
+             <h3 class="h3_1">Choose the frequency</h3>
+             <p class="p_1">Customize your order frequency, quantity, even your roast style and grind type. Pause, skip or cancel your subscription with no commitment through our online portal.</p>
               </li>
               <li class="block__list">
                 <h2 class="raqam__01">03</h2>
-             <h3>Receive and enjoy!</h3>
-             <p>We ship your package within 48 hours, freshly roasted. Sit back and enjoy award-winning 
+             <h3 class="h3_1">Receive and enjoy!</h3>
+             <p class="p_1">We ship your package within 48 hours, freshly roasted. Sit back and enjoy award-winning 
                 world-class coffees curated to provide a distinct tasting experience.</p>
               </li>
             </ul>
+            <div class="link_careate">Create your plan</div>
           </div>
         </div>
       </section>
